homecluster/mealie-v3/http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mealie-v3-https-redirect
  namespace: mealie
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-v3-http-redirect
  namespace: mealie
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: mealie-mealie-v3-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.local.tylermarques.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-v3
                port:
                  name: http
