homecluster/mealie-v3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-v3
  namespace: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Mealie
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mealie.png
    gethomepage.dev/pod-selector: app.kubernetes.io/name=mealie
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.local.tylermarques.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-v3
                port:
                  name: http
  tls:
    - secretName: mealie-local-tls
      hosts:
        - mealie.local.tylermarques.com
